--- a/job.css
+++ b/job.css
@@ -65,7 +65,7 @@
     flex-grow: 1;
 }
 
-/* Role Selection */
+/* Auth Section */
 .role-selection {
     display: flex;
     flex-direction: column;
@@ -254,6 +254,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    max-width: 400px;
+    margin: 0 auto;
 }
 
 .form-group {
